# profiling

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
demo-puffin/: Cargo.toml
demo-puffin/src/: main.rs
examples/: puffin.rs  simple.rs
examples/imgui_support/: mod.rs
examples/puffin/: imgui_support.rs  puffin.rs  renderer.rs
profiling/: Cargo.toml
profiling-derive/: Cargo.toml
profiling-procmacros/: Cargo.toml
profiling-procmacros/src/: lib.rs
profiling/examples/: puffin.rs  simple.rs
profiling/src/: empty_impl.rs  lib.rs  optick_impl.rs  puffin_impl.rs  superluminal_impl.rs  tracing_impl.rs  tracy_impl.rs  type_check_impl.rs
src/: guard.rs  lib.rs  optick_impl.rs  tracy_impl.rs  type_check_impl.rs
