[workspace]
members = [
    "profiling-procmacros",
    ".",
]

[package]
name = "profiling"
version = "0.1.9"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "This crate provides a very thin abstraction over other profiler crates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aclysma/profiling"
homepage = "https://github.com/aclysma/profiling"
keywords = ["performance", "profiling"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin = { version = "0.4", optional = true }
optick = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }
tracy-client = { version = "0.12", optional = true }
superluminal-perf = { version = "0.1", optional = true }
profiling-procmacros = { version = "0.1.3", path = "profiling-procmacros", optional = true }

[dev-dependencies]
# Needed for the puffin example
rafx = { version = "=0.0.10", features = ["rafx-vulkan", "framework"] }
winit = "0.24"
bincode = "1.3.1"
lazy_static = "1"
imgui = "0.7"
imgui-winit-support = "0.7"
puffin-imgui = "0.7"
glam = "0.8.6"

log = "0.4"
env_logger = "0.6"

tracing-tracy = { version = "0.4.0" }
tracing-subscriber = { version = "0.2" }

[features]
default = ["procmacros"]
profile-with-puffin = ["puffin"]
profile-with-optick = ["optick"]
profile-with-superluminal = ["superluminal-perf"]
profile-with-tracing = ["tracing"]
profile-with-tracy = ["tracy-client"]
procmacros = ["profiling-procmacros"]

[[example]]
name = "puffin"
path = "examples/puffin/puffin.rs"
required-features = ["profile-with-puffin"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = []
