[package]
name = "profiling-derive"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optick = "^1.3.2"
quote = "^1.0.0"
syn = { version = "^1.0.0", features = ["full"] }

[lib]
proc-macro=true
