[package]
name = "profiling-procmacros"
version = "1.0.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "This crate provides a very thin abstraction over other profiler crates."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/profiling"
homepage = "https://github.com/aclysma/profiling"
keywords = ["performance", "profiling"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro=true
