[package]
name = "profiling"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "This crate provides a very thin abstraction over other profiler crates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aclysma/profiling"
homepage = "https://github.com/aclysma/profiling"
keywords = ["performance", "profiling"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin = { version = "0.3", optional = true }
optick = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }
profiling-derive = { path = "../profiling-derive" }

[dev-dependencies]
skulpin = { version = "0.11.1", default-features = false, features = ["skia_complete", "skulpin_winit", "winit-23"] }
skulpin-plugin-imgui = "0.7"
puffin-imgui = "0.5"
log = "0.4"
env_logger = "0.6"
imgui = "0.6"
imgui-winit-support = "0.6"

[features]
default = []
profile-with-puffin = ["puffin"]
profile-with-optick = ["optick"]
profile-with-tracing = ["tracing"]

[[example]]
name = "puffin"
required-features = ["profile-with-puffin"]