[package]
name = "profiling"
version = "1.0.17"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "This crate provides a very thin abstraction over other profiler crates."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/profiling"
homepage = "https://github.com/aclysma/profiling"
keywords = ["performance", "profiling"]
categories = ["development-tools::profiling"]
exclude = ["/examples", "/screenshots"]
rust-version = "1.60"

[dependencies]
puffin = { version = "0.19", optional = true }
optick = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }
tracy-client = { version = "0.18", optional = true }
superluminal-perf = { version = "0.4", optional = true }
profiling-procmacros = { version = "1.0.17", path = "../profiling-procmacros", optional = true }

[dev-dependencies]
bincode = "1.3.1"
lazy_static = "1"
log = "0.4"
env_logger = "0.6"

tracing-tracy = { version = "0.11.3" }
tracing-subscriber = { version = "0.3" }

[features]
default = ["procmacros"]
profile-with-puffin = ["puffin", "profiling-procmacros?/profile-with-puffin"]
profile-with-optick = ["optick", "profiling-procmacros?/profile-with-optick"]
profile-with-superluminal = [
    "superluminal-perf",
    "profiling-procmacros?/profile-with-superluminal",
]
profile-with-tracing = ["tracing", "profiling-procmacros?/profile-with-tracing"]
profile-with-tracy = [
    "tracy-client",
    "profiling-procmacros?/profile-with-tracy",
]
type-check = []
procmacros = ["profiling-procmacros"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = []
